# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: ci.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230428130154_create_subscription_table.sql  20230807201204_create_subscription_tokens_table.sql  20231011174713_seed_user.sql  20231016174908_create_idempotency_table.sql  20231018201421_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  test_user.rs
